--- a/Store/Templates/Store/customer/checkout.html
+++ b/Store/Templates/Store/customer/checkout.html
@@ -6,10 +6,17 @@
 {% block head %}
 <link href="{% static "css/checkout.css" %}" type="text/css" rel="stylesheet">
 {% endblock %}
-
+{% block nav %}
+  {% if user_id is none %}
+    <li>You are currently logged out</li>
+  {% else %}
+    <li><b>Greetings, {{ username }}!</b></li>
+  {% endif %}
+  {% endblock %} 
 {% block content %}
 <nav class="clean">
     <div class="nav-wrapper">
+            <a href="{% url 'customeraccount' %}">{{username}}</a>
         <div class="col s12">
             <a href="{% url 'cart' %}" class="breadcrumb">Cart</a>
             <a href="{% url 'ship_pay' %}" class="breadcrumb">Shipping & Payment</a> 
