--- a/Store/Templates/Store/admin/authors/details.html
+++ b/Store/Templates/Store/admin/authors/details.html
@@ -20,6 +20,9 @@
 <a class='modal-trigger' href='#updateauthor'><i class="material-icons">edit</i></a>
 <a class='modal-trigger' href='#deleteauthor'><i class="material-icons">delete</i></a>
 </h4>
+<h6>Total Revenue for Author: ${{sum}} 
+    Total Number of Books for Author: {{sum_inventory}}
+</h6>
 <div class="row">
 <div class="col s12 m5">
         <div class="card">
@@ -29,15 +32,17 @@
                     <thead>
                         <tr>
                             <th>Book Title</th>
-                            <th> Copies Sold</th>
+                            <th> Quantity on Hand </th>
+                            <th>Copies Sold </th>
                         </tr>
                     </thead>
                     <tbody>
                     {% for b in books %}
                     <tr>
-                        <td> {{b.title}} </td>
-                        <td> Copies Sold</td>
-                   </tr>
+                        <td> {{b.book_id.title}} </td>
+                        <td> {{b.quantity_on_hand}}</td>
+                        <td>{{b.quantity_ordered}}</td>
+                    </tr>
                     {% endfor %}
                     </tbody>
                 </table>         
