--- a/Store/Templates/Store/admin/customers/states.html
+++ b/Store/Templates/Store/admin/customers/states.html
@@ -13,31 +13,28 @@
 {% endblock %}
 {% block content %}
 <h6>
-    <a href='{% url 'adminindex' %}'><i class=" material-icons medium">keyboard_return</i> Return to Admin Management</a>
+<a href='{% url 'admincustomerindex' %}'><i class=" material-icons medium">keyboard_return</i> Return to Customers</a>
 </h6>
-<h4>Orders</h4>
+<h4>Customers</h4>
 <table>
     <thead>
         <tr>
-            <th>Order ID</th>
-            <th> Customer ID</th>
-            <th> Date Ordered </th>
+            <th>Customer ID</th>
+            <th>Customer Name</th>
+            <th>State</th>
         </tr>
     </thead>
     <tbody>
-            {% for order in orders %}
-            <tr>
-                <td><a href="orders/details/{{order.order_id}}" >{{ order.order_id }}</a></td>       
-                <td>{{ order.customer.id}}</td> 
-                <td>{{ order.date_ordered}}</td>           
-            </tr>
-            {% endfor %}
-        </form>           
+    {% for c in customers %}
+        <tr>
+            <td><a href="{% url 'admincustomerdetail' c.id %} "> {{c.id}}</a></td>  
+            <td> {{c.first_name}} {{c.last_name}}</td>
+            <td>{{c.state_code}}</td>
+        </tr>
+    {% endfor %}
     </tbody>
 </table>
-
-
 <script type="text/javascript" src="{% static "js/jquery-3.3.1.js" %}"></script>
 <script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
-<script type="text/javascript" src="{% static "js/books.js" %}"></script>
+<script type="text/javascript" src="{% static "js/books.js" %}"></script> 
 {% endblock %}
