--- a/Store/Templates/Store/admin/index.html
+++ b/Store/Templates/Store/admin/index.html
@@ -46,7 +46,7 @@
         <a href="{% url 'adminauthorindex' %}">AUTHORS</a>
     </td>
     <td>
-      MONTHLY REPORTS
+        <a href="{% url 'adminreportindex' %}">REPORTS</a>
     </td>
   </tr>
 </table>
