--- a/Store/Templates/Store/admin/publishers/details.html
+++ b/Store/Templates/Store/admin/publishers/details.html
@@ -16,7 +16,10 @@
 <h6>
     <a href='{% url 'adminpublisherindex' %}'><i class=" material-icons medium">keyboard_return</i> Return to Publishers</a>
 </h6>
-<h3>{{publisher.company_name}} </h3>
+<h4>{{publisher.company_name}} </h4>
+<h6> Total Revenue for Publisher: ${{sum}} <br>
+    Total Number of books for Publisher: {{sum_inventory}}
+</h6>
 <div class="row">
 <div class="col s12 m5">
     <div class="card">
@@ -43,15 +46,17 @@
                     <thead>
                         <tr>
                             <th>Book Title</th>
-                            <th> Copies Sold</th>
+                            <th> Quantity on Hand </th>
+                            <th>Copies Sold </th>
                         </tr>
                     </thead>
                     <tbody>
                     {% for b in books %}
                     <tr>
-                        <td> {{b.title}} </td>
-                        <td> Copies Sold</td>
-                   </tr>
+                        <td> {{b.book_id.title}} </td>
+                        <td> {{b.quantity_on_hand}}</td>
+                        <td>{{b.quantity_ordered}}</td>
+                    </tr>
                     {% endfor %}
                     </tbody>
                 </table>         
