--- a/Store/Templates/Store/customer/ccard.html
+++ b/Store/Templates/Store/customer/ccard.html
@@ -44,6 +44,35 @@
         </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col s12 m6">
+            <div class="card">
+              <div class="card-content">
+                  <span class="card-title align=center"><h4>Orders Charged to Card </h4></span>
+                  <table>
+                    <thead>
+                        <tr>
+                            <th>Order ID</th>
+                            <th>Total Price</th>
+                            <th> Date Ordered </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                            {% for order in orders %}
+                            <tr>
+                                <td><a href="{% url 'customerorder' order.order_id %}" >{{ order.order_id }}</a></td>       
+                                <td>{{ order.total_price}}</td> 
+                                <td>{{ order.date_ordered}}</td>           
+                            </tr>
+                            {% endfor %}
+                        </form>           
+                    </tbody>
+                </table>
+                  
+              </div>
+            </div>
+            </div>
+    </div>
 <div id="updateAddress" class="modal">
 <form method="POST" class="col s12" >
 {% csrf_token %} 
