--- a/Store/Templates/Store/customer/books/books.html
+++ b/Store/Templates/Store/customer/books/books.html
@@ -33,7 +33,7 @@
     <tbody>                
         {% for book in books %}
         <tr>
-            <td><a href="books/details/{{ book.book_id }}">{{ book.title }}</a></td>  
+            <td><a href="{% url 'customer_book' book.book_id %}">{{ book.title }}</a></td>  
             <td>{{book.author.last_name}}, {{book.author.first_name}}</td>
             <td>{{book.publisher.company_name}}</td>                             
         </tr>
