--- a/Store/Templates/Store/admin/authors/authors.html
+++ b/Store/Templates/Store/admin/authors/authors.html
@@ -1,4 +1,4 @@
-{% extends 'Store/layout.html' %}
+{% extends 'Store/layoutadmin.html' %}
 {% load staticfiles %}
 {% load widget_tweaks %}
 {% block nav %}
@@ -12,9 +12,7 @@
 
 {% endblock %}
 {% block content %}
-<h6>
-    <a href='{% url 'adminindex' %}'><i class=" material-icons medium">keyboard_return</i> Return to Admin Management</a>
-</h6>
+
 <h4>Authors</h4>
 <table>
     <thead>
