--- a/Store/Templates/Store/admin/books/books.html
+++ b/Store/Templates/Store/admin/books/books.html
@@ -1,4 +1,4 @@
-{% extends 'Store/layout.html' %}
+{% extends 'Store/layoutadmin.html' %}
 {% load staticfiles %}
 {% load widget_tweaks %} 
 
@@ -8,8 +8,7 @@
 
 {% block content %}
 
-<a href="{% url 'adminindex' %}" class="waves-effect waves-green btn-flat">
-    <i class="material-icons medium">keyboard_return</i>Return to Admin Management Page</a>
+
 <div class="section">
     <div class="row">
         <div class="col s2">
