--- a/Store/Templates/Store/admin/books/details.html
+++ b/Store/Templates/Store/admin/books/details.html
@@ -1,4 +1,4 @@
-{% extends 'Store/layout.html' %} 
+{% extends 'Store/layoutadmin.html' %}
 {% load staticfiles %} 
 {% load widget_tweaks %} 
 
@@ -7,9 +7,7 @@
 {% endblock %}
 
 {% block content %}
-<h6>
-    <a href='{% url 'adminbookindex' %}'><i class=" material-icons medium">keyboard_return</i> Return to Books</a>
-</h6>
+
 <div class="section"></div>
 <div class="row">
     <div class="col s6">
