--- a/Store/Templates/Store/admin/customers/details.html
+++ b/Store/Templates/Store/admin/customers/details.html
@@ -1,4 +1,4 @@
-{% extends 'Store/layout.html' %}
+{% extends 'Store/layoutadmin.html' %}
 {% load staticfiles %}
 {% load widget_tweaks %}
 {% block nav %}
@@ -12,9 +12,12 @@
 <link href="{%  static "css/bookstyle.css" %}" type="text/css" rel="stylesheet">
 {% endblock %}
 {% block content %}
-<h6>
-  <a href='{% url 'adminindex' %}'><i class=" material-icons medium">keyboard_return</i> Return to Admin Management</a>
-</h6>
+<ul id="dropdown2" class="dropdown-content">
+    <li><a href="{% url 'admincustomerindex' %}">  All Customers</a></li>
+    <li><a href="{%  url 'admincustomerstates' %}">  Customers By State</a></li>
+    <li><a href="{%  url 'admincustomerrepeat' %}">  Repeat Customers </a></li>
+  </ul>
+<h4><a style="color: black" class="dropdown-trigger" href="#!" data-target="dropdown2">Customers</a></h4>
 <h3>{{customer.user.first_name}} {{customer.user.last_name}}</h3>
 <div class="row">
     <div class="col s12 m6">
