--- a/Store/Templates/Store/admin/genres/details.html
+++ b/Store/Templates/Store/admin/genres/details.html
@@ -1,4 +1,4 @@
-{% extends 'Store/layout.html' %}
+{% extends 'Store/layoutadmin.html' %}
 {% load staticfiles %}
 {% load widget_tweaks %}
 {% block nav %}
