--- a/Store/Templates/Store/admin/inventory/inventory.html
+++ b/Store/Templates/Store/admin/inventory/inventory.html
@@ -1,4 +1,4 @@
-{% extends 'Store/layout.html' %}
+{% extends 'Store/layoutadmin.html' %}
 {% load staticfiles %}
 {% load widget_tweaks %}
 {% block nav %}
@@ -9,9 +9,7 @@
   {% endif %}
 {% endblock %} 
 {% block content %}
-<h6>
-    <a href='{% url 'adminindex' %}'><i class=" material-icons medium">keyboard_return</i> Return to Admin Management</a>
-</h6>
+
 <h1>INVENTORY</h1>
 <table>
     <thead>
