--- a/Store/Templates/Store/admin/orders/details.html
+++ b/Store/Templates/Store/admin/orders/details.html
@@ -1,4 +1,4 @@
-{% extends 'Store/layout.html' %}
+{% extends 'Store/layoutadmin.html' %}
 {% load staticfiles %}
 {% load widget_tweaks %}
 {% block nav %}
@@ -12,9 +12,7 @@
 
 {% endblock %}
 {% block content %}
-<h6>
-        <a href='{% url 'adminorderindex' %}'><i class=" material-icons medium">keyboard_return</i> Return to Orders</a>
-    </h6>
+
 <h4>Order #{{order.order_id}}</h4>
 <div class="row">
     <div class="col s12 m5">
