--- a/Store/Templates/Store/admin/reports/jan.html
+++ b/Store/Templates/Store/admin/reports/jan.html
@@ -1,4 +1,4 @@
-{% extends 'Store/layout.html' %}
+{% extends 'Store/layoutadmin.html' %}
 {% load staticfiles %}
 {% load widget_tweaks %}
 {% block nav %}
@@ -12,10 +12,13 @@
 {% endblock %}
 
 {% block content %}
-<h6>
-        <a href='{% url 'adminreportindex' %}'><i class=" material-icons medium">keyboard_return</i> Return to Reports</a>
-</h6>
-<h4>January</h4>
+<ul id="dropdown2" class="dropdown-content">
+        <li><a href="{% url 'adminreportindex' %}">Reports</a></li>
+        <li><a href="{% url 'february' %}"> February</a></li>
+        <li><a href="{% url 'march' %}"> March</a></li>
+        <li><a href="{% url 'april' %}"> April</a></li>
+      </ul>
+<h4><a style="color: black" class="dropdown-trigger" href="#!" data-target="dropdown2">January</a></h4>
 <div class="row">
     <div class="col s12 m5">
             <div class="card">
