--- a/Store/Templates/Store/admin/orders/details.html
+++ b/Store/Templates/Store/admin/orders/details.html
@@ -12,8 +12,12 @@
 
 {% endblock %}
 {% block content %}
+<ul id="dropdown2" class="dropdown-content">
+        <li><a href="{%  url 'adminorderindex' %}">  Orders</a></li>
+        <li><a href="{%  url 'admincancelledorders' %}">  Cancelled Orders</a></li>
+      </ul>
+<h4><a style="color: black" class="dropdown-trigger" href="#!" data-target="dropdown2">Order #{{order.order_id}}</a></h4>
 
-<h4>Order #{{order.order_id}}</h4>
 <div class="row">
     <div class="col s12 m5">
             <div class="card">
