--- a/Store/Templates/Store/customer/corder.html
+++ b/Store/Templates/Store/customer/corder.html
@@ -16,6 +16,7 @@
 <a href='{% url 'customeraccount' %}'><i class=" material-icons medium">keyboard_return</i> Return to Account Overview</a>
 </h6>
 <h4>Order #{{order.order_id}}</h4>
+
 <div class="row">
     <div class="col s12 m5">
             <div class="card">
@@ -25,8 +26,11 @@
                         <li>Date Ordered: {{order.date_ordered}} </li>
                         <li>Discount: {{order.discount}}</li>
                         <li>Total Price: {{order.total_price}}</li>
+                        <li>Status: {{order.status}} </li>
                     </ul>
-
+                    <div class="card-action">
+                        <a class="modal-trigger "href="#cancelOrder">Cancel Order</a>
+                    </div>     
                 </div>       
             </div>
         </div>
@@ -82,7 +86,21 @@
                 </div>
                 </div>
             </div>
-
+            <div id="cancelOrder" class="modal">
+                    <form method="POST" class="col s12" >
+                    {% csrf_token %} 
+                    
+                    <div class="modal-content">
+                            <h3> Cancel Order?</h3>
+                        <div class="row">
+                            <p>Money Will be Refunded within 5-7 Business Days</p>
+                        </div>
+                    <div class="modal-footer">
+                        
+                        <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="cancel-order">Cancel Order</button>
+                    </div>
+                    </form>
+                    </div>
 <script type="text/javascript" src="{% static "js/jquery-3.3.1.js" %}"></script>
 <script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
 <script type="text/javascript" src="{% static "js/books.js" %}"></script>
